package com.dev.alan.patterns.structural.bridge;

public interface Renderer {

    String renderShape(String shape);
}
